--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <footer>
       <div class="attribution">
         <a href="https://github.com/KomeOlomu/weather-app.git" target="_blank">
-          Open Source Code
+          Open-source code
         </a>
         by Kome Olomu
       </div>
