--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <main>
       <div class="container">
+        <div class="weather-app-wrapper">
         <div class="weather-app">
           <form class="search-form" id="search-form">
             <div class="row">
@@ -101,6 +102,7 @@
           Open-source code
         </a>
         by Kome Olomu
+        </div>
       </div>
     </footer>
   </body>
