Changes to the css properties of temp

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <div>
                     <strong id="temperature"></strong
                     ><span class="units">
-                      <a href="#" id="celcius">&#176;C </a> |<a
+                      <a href="#" id="celcius" class="active">&#176;C </a> |<a
                         href="#"
                         id="fahrenheit"
                         >&#176;F</a
