Added the forecast HMTL and CSS

--- a/index.html
+++ b/index.html
@@ -86,9 +86,21 @@
                 <span id="low-temp">L: 24</span>&#176;
               </li>
             </ul>
-            <div class="row week-forecast" id="forecast">
-              <div class="col2">
-                <div style="text-align: center" class="row"></div>
+            <div class="week-forecast" id="forecast">
+              <div class="row">
+                <div class="col-2">
+                  <div class="weather-forecast-date">Thursday</div>
+                  <img
+                    src="images/rainy-weather.png"
+                    alt="rainy-weather"
+                    class="weather-icon"
+                    width="15px"
+                  />
+                  <div class="weather-forecast-temperatures">
+                    <span class="weather-forecast-temperature-max">18°</span>
+                    <span class="weather-forecast-temperature-min">12°</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
