Implemented unit conversion for weather forecast

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="weather-app">
             <form class="search-form" id="search-form">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-5 col-md-6">
                   <input
                     type="search"
                     placeholder="Type City"
@@ -34,14 +34,14 @@
                     class="form-control"
                   />
                 </div>
-                <div class="col-2">
+                <div class="mt-2 mt-sm-0 col-6 col-sm-3 col-md-2">
                   <input
                     type="submit"
                     value="Search"
                     class="form-control btn btn-primary"
                   />
                 </div>
-                <div class="col-4">
+                <div class="mt-2 mt-sm-0 col-6 col-sm-4 col-md-4">
                   <input
                     type="submit"
                     value=" Current location📍"
@@ -93,7 +93,7 @@
                   <img
                     src="images/rainy-weather.png"
                     alt="rainy-weather"
-                    class="weather-icon"
+                    class="forecast-icon"
                     width="15px"
                   />
                   <div class="weather-forecast-temperatures">
