Updated the CSS styles

--- a/index.html
+++ b/index.html
@@ -35,17 +35,14 @@
                   />
                 </div>
                 <div class="mt-2 mt-sm-0 col-6 col-sm-3 col-md-2">
-                  <input
-                    type="submit"
-                    value="Search"
-                    class="form-control btn btn-primary"
-                  />
+                  <input type="submit" value="Search" class="form-control btn
+                  btn-light"" />
                 </div>
                 <div class="mt-2 mt-sm-0 col-6 col-sm-4 col-md-4">
                   <input
                     type="submit"
                     value=" Current location📍"
-                    class="form-control btn btn-outline-primary"
+                    class="form-control btn btn-outline-light"
                     id="current-location"
                   />
                 </div>
@@ -81,10 +78,10 @@
             <ul>
               <li id="humidity">Humidity: 79</li>
               <li id="wind">Wind: 21</li>
-              <li>
+              <!-- <li>
                 <span id="high-temp">H: 28</span>&#176;
                 <span id="low-temp">L: 24</span>&#176;
-              </li>
+              </li> -->
             </ul>
             <div class="week-forecast" id="forecast">
               <div class="row">
